[project]
name = "zen-profile-generator"
version = "0.1.0"
description = "Generador de perfiles para Zen Browser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pgzen = "pgzen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["pgzen.py"]
