[project]
name = "zen-profile-generator"
version = "1.2"
description = "Herramienta CLI (generada con vibecode) para clonar y configurar perfiles de Zen Browser con selección interactiva de mods, extensiones y contenedores"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
authors = [
    { name = "Sr-Alvarado", email = "dev@mrchasp.com" }
]
license = { text = "MIT" }
keywords = ["zen-browser", "profile", "flatpak", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Sr-Alvarado/zen-profile-generator"
Repository = "https://github.com/Sr-Alvarado/zen-profile-generator"
Issues = "https://github.com/Sr-Alvarado/zen-profile-generator/issues"

[project.scripts]
pgzen = "zen_profile_generator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zen_profile_generator"]
